--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -32,20 +32,24 @@
     android:layout_height="50dp"
     android:layout_marginRight="16dp"
     />
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
     <TextView
         android:id="@+id/version_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textColor="#000000"/>
+        android:textColor="#000000"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/version_number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="2"
-        android:textColor="#000000"/>
-
+        android:textColor="#212121"/>
+</LinearLayout>
 </LinearLayout>
 
